syntax = "proto3";

package go.micro.service.user;

service UserService {
    // 用户注册
    rpc Signup(ReqSignup) returns (RespSignup) {}
    // 用户登录
    rpc Login(ReqLogin) returns (RespLogin) {}
    // 获取用户信息
    rpc UserInfo(ReqUserInfo) returns (RespUserInfo) {}
    // 获取用户文件列表
    rpc UserFiles(ReqUserFile) returns (RespUserFile) {}
    // 用户文件重命名
    rpc UserFileRename(ReqUserFileRename) returns (RespUserFileRename) {}
    // 删除用户文件
    rpc UserFileDelete(ReqUserFileDelete) returns (RespUserFileDelete) {}
}

message ReqSignup {
    string username = 1;
    string password = 2;
}

message RespSignup {
    int32 code = 1;
    string message = 2;
}

message ReqLogin {
    string username = 1;
    string password = 2;
}

message RespLogin {
    int32 code = 1;
    string token = 2;
    string message = 3;
}

message ReqUserInfo {
    string username = 1;
}

message RespUserInfo {
    int32 code = 1;
    string message =2;
    int32 id=3;
    string username =4;
}

message ReqUserFile {
    string username = 1;
    int32 limit = 2;
    int32 Offset=3;
}

message RespUserFile {
    int32 code = 1;
    string message =2;
    bytes fileData = 3;
}

message ReqUserFileRename {
     string username = 1;
     string filehash = 2;
     string newFileName = 3;
}

message RespUserFileRename {
    int32 code = 1;
    string message =2;
    bytes fileData = 3;
}
message ReqUserFileDelete {
    string username = 1;
    string filehash = 2;
}
message RespUserFileDelete {
    int32 code = 1;
    string message =2;
    bytes fileData = 3;
}